--- a/css/main.css
+++ b/css/main.css
@@ -1,1 +1,133 @@
-body { background-color: red;}
+@font-face {
+    font-family: casiFont;
+    src: url("../fonts/Casino.ttf");
+  }
+body{
+    margin: 0px;
+    background-color: #47125c;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='126' height='84' viewBox='0 0 126 84'%3E%3Cg fill-rule='evenodd'%3E%3Cg fill='%23ff0000' fill-opacity='0.4'%3E%3Cpath d='M126 83v1H0v-2h40V42H0v-2h40V0h2v40h40V0h2v40h40V0h2v83zm-2-1V42H84v40h40zM82 42H42v40h40V42zm-50-6a4 4 0 1 1 0-8 4 4 0 0 1 0 8zM8 12a4 4 0 1 1 0-8 4 4 0 0 1 0 8zm96 12a4 4 0 1 1 0-8 4 4 0 0 1 0 8zm-42 0a4 4 0 1 1 0-8 4 4 0 0 1 0 8zm30-12a4 4 0 1 1 0-8 4 4 0 0 1 0 8zM20 54a4 4 0 1 1 0-8 4 4 0 0 1 0 8zm12 24a4 4 0 1 1 0-8 4 4 0 0 1 0 8zM8 54a4 4 0 1 1 0-8 4 4 0 0 1 0 8zm24 0a4 4 0 1 1 0-8 4 4 0 0 1 0 8zM8 78a4 4 0 1 1 0-8 4 4 0 0 1 0 8zm12 0a4 4 0 1 1 0-8 4 4 0 0 1 0 8zm54 0a4 4 0 1 1 0-8 4 4 0 0 1 0 8zM50 54a4 4 0 1 1 0-8 4 4 0 0 1 0 8zm24 0a4 4 0 1 1 0-8 4 4 0 0 1 0 8zM50 78a4 4 0 1 1 0-8 4 4 0 0 1 0 8zm54-12a4 4 0 1 1 0-8 4 4 0 0 1 0 8zm12 12a4 4 0 1 1 0-8 4 4 0 0 1 0 8zM92 54a4 4 0 1 1 0-8 4 4 0 0 1 0 8zm24 0a4 4 0 1 1 0-8 4 4 0 0 1 0 8zM92 78a4 4 0 1 1 0-8 4 4 0 0 1 0 8zm24-42a4 4 0 1 1 0-8 4 4 0 0 1 0 8z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+    font-family:sans-serif;
+  }
+header {
+    width: 100%;
+    height: 150px;
+    display: flex;
+    justify-content: center;
+    background-color: #47125c;
+}
+
+h1 {
+    font-family: casiFont, sans-serif;
+    color: white;
+    font-size: 65px;
+}
+#ejercicio{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    flex-direction: row;
+    padding: 0px 30px;
+  }
+.container {
+    font-weight: bold;
+    margin-top: 15px;
+    margin-bottom: 15px;
+    background-color: rgba(255, 255, 255, 0.3);
+    border: 2px solid white;
+    border-radius: 40px;
+    color: white;
+    padding: 20px 68px 40px;
+    min-height: 480px;
+    width: 550px;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    font-size: 20px;
+    font-family: 'Rubik', sans-serif;
+}
+.lado{
+    position: relative;
+	width: 30%;
+	padding: 50px 0;
+	background-color: rgba(255, 255, 255, 0.3);
+	box-shadow: 0 10px 30px rgba(50, 50, 50, 0.2);
+	border-radius: 8px;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+    border: 2px solid white;
+    border-radius: 40px;
+}
+#tiro {
+    font-family: 'Rubik', sans-serif;
+    color: white;
+    font-weight: bold;
+    font-size: 24px;
+}
+.dado{
+    background-image:url(https://i.pinimg.com/originals/0b/61/ba/0b61ba096406865f0e76a9b07e36dc69.png);
+    background-position:-803px;
+    width:157px;
+    height:156px;
+}
+#contenedor_dados{
+    display:flex;
+    width:315px;
+    margin:0 auto;
+}
+  
+#boton_tirar{
+    display:block;
+    width:100px;
+    height:60px;
+    margin:10px auto;
+    background-color:#A62E2E;
+    color:#F2D857;
+    border:0;
+    border-radius:10px;
+    cursor:pointer;
+    font-family: 'Rubik', sans-serif;
+    font-size: 23px;
+    font-weight: bold;
+}
+#boton_tirar:hover {
+    background-color: #dd1919;
+    color:#f7d52f;
+}
+  
+@media only screen and (min-width: 320px) and (max-width: 480px) {
+    #ejercicio{
+      flex-direction:column;
+    }
+    .lado{
+      width:100%;
+    }
+}
+@keyframes pulse {
+    0% {transform: scale(1);}
+    50% {transform: scale(1.3);}
+    100% {transform: scale(1);}
+  }
+  .pulse {
+    animation-name: pulse;
+    animation-duration: 2s;
+    animation-iteration-count: infinite;
+  }
+  .footer {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    height: 57px;
+    width: 100%;
+    background: #FF2442;
+}
+.footer a {
+    color: white;
+    cursor: pointer;
+    font-size: 14px;
+    padding-left: 30px;
+    text-decoration: none;
+}
+.footer a:hover {
+    text-decoration: underline;
+}
